--- a/styles.css
+++ b/styles.css
@@ -4,125 +4,7 @@
 h3, h4 {
     margin: 0;
 }
-/*
-.container{
-    display: flex;
-    gap: 50px;
-    align-items: center;
-    justify-content: center;
-    font-family: "Varela Round", sans-serif;
-    line-height: 1.5em;
-    max-width: 100%;
-    overflow: hidden;
-}
 
-.item {
-    --color: #eb904b;
-    width: 185px;
-    background-color: var(--color);
-    border-radius: 10px;
-    padding: 10px 5px;
-    box-shadow: 
-    #3c40434d 0px 1px 2px 0px
-    #3c404326 0px 1px 3px 1px;
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-
-}
-
-.item::after {
-    content: "";
-    position: absolute;
-    top: 8px;
-    left: 0;
-    z-index: 2;
-    height: 80%;
-    box-sizing: border-box;
-    border-style: solid;
-    border-color: transparent
-    transparent transparent var(--color);
-    border-width: 40px 40px 40px 40px;
-    filter: drop-shadow(5px 0 4px #00000094);
-    transition: filter .5s;
-}
-
-.item:nth-child(2) {
-    --color: #813085;
-
-}
-
-.item:nth-child(3){
-    --color: #119630;
-}
-
-.layer {
-    background-color: #f2f2f2;
-    border: 1px solid #fff;
-    border-radius: inherit;
-    padding: 20px;
-    box-shadow: 
-    #00000012 0px 1px 2px,
-    #00000012 0px 2px 4px,
-    #00000012 0px 4px 8px,
-    #00000012 0px 8px 16px,
-    #00000012 0px 16px 32px,
-    #00000012 0px 32px 64px;
-    position: relative;
-    left: 10px;
-    transition: left;
-
-}
-
-h3 {
-    font-weight: 700;
-    text-align: center;
-    color: var(--color);
-
-}
-
-h4 {
-    color: #fff;
-    text-align: center;
-    font-size: 14px;
-    padding-top: 10px;
-
-}
-
-p {
-    color: #555;
-}
-
-span {
-    width: 40px;
-    height: 40px;
-    color: #fff;
-    background-color: var(--color);
-    border-radius: 50%;
-    display: grid;
-    place-content: center;
-    box-shadow: 
-    #00000012 0px 1px 2px,
-    #00000012 0px 2px 4px,
-    #00000012 0px 4px 8px,
-    #00000012 0px 8px 16px,
-    #00000012 0px 16px 32px,
-    #00000012 0px 32px 64px;
-    font-size: 14px;
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-}
-
-.item.item:hover:after{
-    filter: drop-shadow(5px 0 4px 
-    #0000001a);
-}
-
-.item:hover .layer {
-    transform: translate(40px);
-    transition: transform 0.5s ease-in-out;
-} */
 
 * {
     margin: 0;
@@ -152,8 +34,8 @@ body {
 }
   
 .wrapper {
-    height: 400px;
-    width: 700px;
+    height: 40vh;
+    width: 70vw;
     background-color: #3760C9;
     position: relative;
     display: flex;
@@ -169,23 +51,23 @@ body {
     width: 100%;
     top: 0;
     left: 0;
-    border-right: 350px solid transparent;
-    border-bottom: 200px solid transparent;
-    border-left: 350px solid transparent;
+    border-right: 35vw solid transparent;
+    border-bottom: 20vh solid transparent;
+    border-left: 35vw solid transparent;
     transform-origin: top;
     transition: transform 0.5s ease-out; /* Transición suave para abrir las solapas */
 }
 
 /* Solapa superior */
 .lid.one {
-    border-top: 200px solid #658ced;
+    border-top: 20vh solid #658ced;
     transform: rotateX(0deg); /* Completamente cerrada */
     z-index: 3;
 }
 
 /* Solapa inferior */
 .lid.two {
-    border-top: 200px solid #3760C9;
+    border-top: 20vh solid #3760C9;
     transform: rotateX(0deg); /* Completamente cerrada */
     z-index: 1;
 }
@@ -213,10 +95,10 @@ body {
     width: 100%;
     top: 0;
     left: 0;
-    border-top: 200px solid transparent;
-    border-right: 350px solid #C4DFF0;
-    border-bottom: 200px solid #C4DFF0;
-    border-left: 350px solid #a4d4f2;
+    border-top: 20vh solid transparent;
+    border-right: 35vw solid #C4DFF0;
+    border-bottom: 20vh solid #C4DFF0;
+    border-left: 35vw solid #a4d4f2;
     z-index: 3;
 }
 
