--- a/styles.css
+++ b/styles.css
@@ -558,6 +558,22 @@ footer {
   }
 
 
+  #lyrics-container{
+    position: fixed;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    font-size: 24px;
+    line-height: 1.6;
+    text-align: center;
+  }
+
+  .highlight{
+    color: grey;
+    font-weight: bold;
+  }
+
 
 
 
