--- a/styles.css
+++ b/styles.css
@@ -583,19 +583,30 @@ footer {
     perspective: calc(var(--index) * 35);
 }
 
-.item{
+.item {
     width: calc(var(--index) * 3);
     height: calc(var(--index) * 12);
-    background-color: #222;
-    background-size: cover;
+    background-color: #4B75BE33;
+    background-size: contain; /* Mostrar la imagen completa */
     background-position: center;
+    background-repeat: no-repeat; /* Evitar repeticiones */
     cursor: pointer;
     filter: grayscale(1) brightness(.5);
     transition: transform 1.25s var(--transition),
                 filter 3s var(--transition),
                 width 1.25s var(--transition);
-        will-change: transform, filter, rotateY, width;
+    will-change: transform, filter, rotateY, width;
 }
+
+.items .item:active, 
+.items .item:focus {
+    width: 30vw; /* Asegurar que se expanda bien */
+    filter: inherit;
+    z-index: 100;
+    transform: translateZ(0) rotateY(0); /* Evita la perspectiva al ampliar */
+    margin: 0 .45vw;
+}
+
 
 .item::before, .item::after{
     content: '';
@@ -729,11 +740,13 @@ footer {
     border: 1px solid rgba(255, 255, 255, 0.4); /* Borde translúcido */
     border-radius: 12px;
     backdrop-filter: blur(10px); /* Efecto de desenfoque */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     text-transform: uppercase;
     letter-spacing: 1px;
     cursor: pointer;
     transition: all 0.3s ease;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 2); /* Sombra sutil */
+    
   }
   
   .glassy-button:hover {
@@ -744,7 +757,7 @@ footer {
   
   .glassy-button:active {
     transform: scale(0.95);
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
   }
 
 
