--- a/styles.css
+++ b/styles.css
@@ -566,77 +566,48 @@ footer {
 
 /* galeria de imágenes*/
 
-:root {
-    --index: calc(0.8vw + 0.8vh); /* Reducimos el tamaño base */
-    --transition: cubic-bezier(.1, .7, 0, 1);
-}
-
 .wrapper-gallery {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 60vh; /* Ajustamos la altura para que las imágenes sean visibles */
-    overflow: hidden; /* Evitamos desbordamientos */
-    padding: 1rem 0;
-}
-
-.gallery-container {
+    margin: 0;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    background-color: transparent;
+  }
+  
+  .gallery {
+    position: relative;
+    width: 300px;
+    height: 200px;
+    transform-style: preserve-3d;
+    animation: rotate 35s linear infinite;
+  }
+  
+  @keyframes rotate {
+    from {
+      transform: perspective(1200px) rotateY(0deg);
+    }
+    to {
+      transform: perspective(1200px) rotateY(360deg);
+    }
+  }
+  
+  .gallery span {
+    position: absolute;
     width: 100%;
-    overflow-x: auto; /* Agregamos scroll horizontal si es necesario */
-    white-space: nowrap; /* Evitamos que las imágenes salten de línea */
-    padding-bottom: 10px; /* Espacio para la barra de scroll */
-}
-
-.items {
-    display: flex;
-    gap: 0.4rem;
-    perspective: calc(var(--index) * 35);
-    width: max-content; /* Asegura que el contenido tenga el tamaño necesario */
-}
-
-.item {
-    width: calc(var(--index) * 2.5); /* Se reduce el tamaño de los rectángulos */
-    height: calc(var(--index) * 10);
-    background-color: #4B75BE33;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    filter: grayscale(1) brightness(.5);
-    transition: transform 1.25s var(--transition),
-                filter 3s var(--transition),
-                width 1.25s var(--transition);
-    will-change: transform, filter, rotateY, width;
-}
-
-/* Scroll estilizado */
-.gallery-container::-webkit-scrollbar {
-    height: 8px; /* Grosor de la barra de desplazamiento */
-}
-
-.gallery-container::-webkit-scrollbar-thumb {
-    background: rgba(75, 117, 190, 0.6); /* Color de la barra */
-    border-radius: 4px;
-}
-
-.gallery-container::-webkit-scrollbar-track {
-    background: rgba(255, 255, 255, 0.1);
-}
-
-/* Ajustes al hacer hover o click */
-.items .item:hover {
-    filter: inherit;
-    transform: translateZ(calc(var(--index) * 8));
-}
-
-.items .item:active, .items .item:focus {
-    width: 20vw;
-    filter: inherit;
-    z-index: 100;
-    transform: translateZ(calc(var(--index) * 10));
-    margin: 0 .45vw;
-}
-
+    height: 100%;
+    transform-origin: center;
+    transform-style: preserve-3d;
+    transform: rotateY(calc(var(--i) * 45deg)) translateZ(380px);
+  }
+  
+  .gallery span img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+  
 
 
 .btn-music{
